<resources>
    <string name="app_name">PrimeQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="correct">True</string>
    <string name="incorrect">False</string>
    <string name="next">Next Question</string>
    <string name="hint">Hint</string>
    <string name="cheat">Cheat</string>
    <string name="hintstr">You are about to take a hint!!</string>
    <string name="cheatstr">You are about to cheat!!</string>
    <string name="showhint">Show Hint</string>
    <string name="showcheat">Show Cheat</string>
    <string name="yes_prime"> is a prime number</string>
    <string name="no_prime"> is not a prime number</string>
</resources>
