<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rajeevnagarwal.assignment1.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:id="@+id/QuestionView"
        android:background="@drawable/question_drawable"
        android:padding="5dp"
        android:layout_gravity="center"
       />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:id="@+id/linearLayout">

        <Button
            android:paddingRight="@dimen/padding_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:id="@+id/buttonCorrect"
            android:drawableLeft="@mipmap/correct"
            android:onClick="onCorrect"
            android:background="@drawable/button_drawable"
            />

        <Button
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect"
            android:paddingRight="@dimen/padding_right"
            android:id="@+id/buttonIncorrect"
            android:drawableLeft="@mipmap/wrong"
            android:onClick="onIncorrect"
            android:background="@drawable/button_drawable"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:id="@+id/linearLayout1">

        <Button
            android:paddingRight="@dimen/padding_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:id="@+id/buttonHint"
            android:drawableLeft="@mipmap/hint_icon"
            android:onClick="onHint"
            android:background="@drawable/button_drawable"
            />

        <Button
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat"
            android:paddingRight="@dimen/padding_right"
            android:id="@+id/buttonCheat"
            android:drawableLeft="@mipmap/cheat_icon"
            android:onClick="onCheat"
            android:background="@drawable/button_drawable"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/buttonNext"
        android:drawableRight="@mipmap/forward"
        android:text="@string/next"
        android:paddingLeft="@dimen/padding_left"
        android:background="@drawable/button_drawable"
        android:onClick="onNext"
        />
</LinearLayout>
